<resources>
    <string name="app_name">Final Project CST2335</string>

    <!-- Strings for nasa image of the day app -->
    <string name="datePicker">Select a date</string>
    <string name="popUpMessage">Do you really want to delete this item?</string>
    <string name="deleted_true">Record deleted successfully!</string>
    <string name="deleted_false">Operation failed</string>
    <string name="saveConfirmation">Image added to your favorites!</string>
    <string name="duplicatedFile">Image already exists in your favorites!</string>
    <string name="nullImage">No image to save</string>
    <string name="nullHDUrl">HD url not available</string>
    <string name="welcomeMessage">Welcome to Nasa Image of the Day! Your last login was on</string>
    <string name="appPref" translatable="false">NasaAppPrefs</string>
    <string name="dateKey" translatable="false">dateKey</string>
    <string name="info">To search a new image, tap the date selector and pick a date.\nThen press "search" button\n
    After loading an image, you can save it to your favourites, see a description, and share it.</string>
    <string name="header">Nasa Image of the Day</string>
    <string name="searchBtn">Search</string>
    <string name="hdUrlLink">Open HD image on browser</string>
    <string name="saveBtn">Save</string>
    <string name="clearBtn">Clear</string>
    <string name="favBtn">See Favourites</string>
    <string name="close">Close</string>
    <string name="back">Back to Main</string>
    <string name="open" translatable="false">open</string>
    <string name="wrongDate">Your must pick a date equal or prior to the current date!</string>
    <string name="emptyDate">Date cannot be blank!</string>
    <string name="about">Nasa Image of The Day\nAuthor: Guilherme Jardim\nVersion: 1.0\nYear: 2020</string>

    //bbcnews
    <string name="bbc_title">Help menu</string>
    <string name="bbc_message1">The selected row is: </string>
    <string name="bbc_message2">The database id:</string>
    <string name="bbc_back">Back to front</string>
    <string name="bbc_yes">Yes</string>
    <string name="bbc_no">No</string>
    <string name="bbc_checkinfo">Check information</string>
    <string name="bbc_intro">Introduction for this page: </string>
    <string name="bbc_homepage">Home page</string>
    <string name="bbc_favouriteList">Favourite list</string>
    <string name="bbc_delete">Do you want to delete? </string>
    <string name="bbc_addToFavour">Added to favourite list</string>
    <string name="bbc_refresh">Refresh</string>
    <string name="bbc_type">Type here </string>
    <string name="favour_news_title">Favourite List</string>
    <string name="bbc_change_name">Change name</string>


    <string name="snackbarChang">BBCNews:\nNews scrapper from BBC\n\n
        Nasa Image of the Day:\nCatch the pictures from Nasa\n\n
        Nasa Earth Imagery:\nEarth Image from Nasa\n\n
        The Guardian News:\nFind articles from The Guardian newspaper
    </string>

    <!-- Strings for nasa earth imagary Chang -->
    <string name="lonTextChang">type lon info</string>
    <string name="latTextChang">type lat info</string>
    <string name="searchButtonChang">Search</string>
    <string name="addToFavoriteButtonChang">Add to Favorite</string>
    <string name="showFavoriteButtonChang">Show Favorite List</string>
    <string name="dialogMessage">Do you want to delete index </string>
    <string name="deleteMessage">Delete </string>
    <string name="helpBtnChang">Help </string>
    <string name="hideFavoriteButtonChang">Hide List </string>
    <string name="activityMenu">Activity Menu </string>
    <string name="detailInstruction">Type in lat and lon of image, then a new page will be loaded and all information will be present. There are 3 buttons on next page, the add button can add the image into the database, the show button can show the full list of image. If you click on the item, detial informaiton of that item will be shown up, hide button will hide list.</string>
    <string name="toastChang">The image has been add to Favourite List</string>
    <string name="dateTextChang">Date: </string>
    <string name="sourceTextChang">source: </string>
    <string name="versionTextChang">Service Version: </string>
    <string name="imageInformationChang">Image Information: </string>
    <string name="imageIdChang">Image ID: </string>
    <string name="hideButtonChang">HIDE</string>
    <string name="snackbarChang2">You click on Help button</string>
    <string name="snackbarChang3">The list has been hided</string>

    //Guardian string
    <string name="guardian_open">open</string>
    <string name="guardian_close">close</string>

    <string name="G_MainTitle">The Guardian News</string>
    <string name="G_MainHint">Enter key word without space</string>
    <string name="G_Search">Search</string>
    <string name="G_UrlTitle">Click on the following link to access the news: </string>
    <string name="G_SectionTitle">Section Name of this article: </string>
    <string name="G_AddToFav">Add to Favorite</string>
    <string name="G_FavTitle">Favorite List</string>
    <string name="G_DrawerHeader">Welcome to The Guardian News</string>

    <string name="G_OverFlowMenu">You clicked on the overflow menu</string>
    <string name="G_QuestionIcon">You clicked on question icon</string>
    <string name="G_Instruction1">1. Enter a key word in the search area, then click on "Search" button to search for news with the key words.</string>
    <string name="G_Instruction2">2. In the News list, click on one item to see details about a news.</string>
    <string name="G_Instruction3">3. In the detailed news page, click on the Url to read the news. Click on "Add to Favorite" to add this news to the favorite list.</string>
    <string name="G_Instruction4">4. In the main menu, there is a favorite button on the toolbar, click on it to see the list of favorite news.</string>
    <string name="G_Instruction5">5. In the Favorite list, short click to see details about the news, and long click to delete the news from favorite list.</string>

    <string name="G_Yes">Yes</string>
    <string name="G_No">No</string>
    <string name="G_Dismiss">Dismiss</string>

    <string name="G_GoToMain">Go to Guardian Home Page</string>


</resources>
