<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/favour_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/favour_news_title"
        android:textSize="25dp"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bbc_type"
        android:id="@+id/bbc_text_input"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/bbc_changeButton"
        android:layout_below="@+id/favour_news_title"/>
    <Button
        android:text="@string/bbc_change_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bbc_changeButton"
        android:layout_below="@+id/favour_news_title"
        android:layout_alignParentRight="true"
        />


    <ListView
        android:id="@+id/favour_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bbc_text_input"
        android:layout_marginBottom="45dp"></ListView>


</RelativeLayout>