<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".GuardianMainActivity">

    //Tool Bar

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_toolbar"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            //Text under toolbar

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/G_MainTitle"
                android:textSize="50dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#6638e2"
                />

            <EditText
                android:id="@+id/searchET"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:hint="@string/G_MainHint"/>

            <Button
                android:id="@+id/searchB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/G_Search"/>

        </LinearLayout>
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/guardian_drawer_header"
            app:menu="@menu/guardiandrawermenu"
            android:id="@+id/nav_view"/>
    </androidx.drawerlayout.widget.DrawerLayout>




</LinearLayout>
